name color changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         .name span {
             z-index: 100;
-            color: rgba(255, 255, 255, 0.478);
+            color: rgba(255, 255, 255, 0.845);
 
 
         }
@@ -177,7 +177,7 @@
             <div class="flash"></div>
         </div>
         <div class="nav">
-            <span class="link"><a href="https://www.facebook.com/wannafun.0/" target="_blank"
+            <span class="link"><a href="https://www.facebook.com/chandan.musician/" target="_blank"
                     rel="noopener noreferrer"><i class='bx bxl-facebook-circle'></i></a></span>
             <span class="link"><a href="mailto:singh963130@gmail.com"><i class='bx bxl-gmail'></i></a></span>
             <span class="link"><a href="https://www.instagram.com/chandan.musician/" target="_blank"
