--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
         #C {
             font-weight: bold !important;
+            color: rgb(0, 197, 0);
+
         }
 
         #D {
@@ -152,7 +154,7 @@
             cursor: pointer;
         }
         body{
-            background-image: url('https://images.unsplash.com/photo-1620577610365-86c411bad78d?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+            /* background-image: url('https://images.unsplash.com/photo-1620577610365-86c411bad78d?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); */
             /* background-image: url('https://images.unsplash.com/photo-1506157786151-b8491531f063?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); */
             /* background-image: url('https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); */
             background-repeat: no-repeat;
